--- a/XRTK.Anchors.ASA/Packages/com.xrtk.anchors.asa/Editor/XRTK.Anchors.ASA.Editor.asmdef
+++ b/XRTK.Anchors.ASA/Packages/com.xrtk.anchors.asa/Editor/XRTK.Anchors.ASA.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "XRTK.ProjectName.Editor",
+    "name": "XRTK.Anchors.ASA.Editor",
     "references": [
         "GUID:f3241d040533491e8a1e2714b27c3111",
         "GUID:e67d30660ec243e4836aac191d3f36fb",
