--- a/XRTK.Anchors.ASA/Packages/com.xrtk.anchors.asa/Runtime/XRTK.Anchors.ASA.asmdef
+++ b/XRTK.Anchors.ASA/Packages/com.xrtk.anchors.asa/Runtime/XRTK.Anchors.ASA.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "XRTK.ProjectName",
+    "name": "XRTK.Anchors.ASA",
     "references": [
         "GUID:f3241d040533491e8a1e2714b27c3111"
     ],
