--- a/XRTK.Anchors.ASA/Packages/com.xrtk.anchors.asa/Editor/XRTK.Anchors.ASA.Editor.asmdef
+++ b/XRTK.Anchors.ASA/Packages/com.xrtk.anchors.asa/Editor/XRTK.Anchors.ASA.Editor.asmdef
@@ -1,11 +1,11 @@
 {
     "name": "XRTK.Anchors.ASA.Editor",
+    "rootNamespace": "XRTK.Anchors.ASA.Editor",
     "references": [
         "GUID:f3241d040533491e8a1e2714b27c3111",
         "GUID:e67d30660ec243e4836aac191d3f36fb",
         "GUID:395bd8dd25074437ba735310022f8f0a"
     ],
-    "optionalUnityReferences": [],
     "includePlatforms": [
         "Editor"
     ],
@@ -15,5 +15,6 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": []
+    "versionDefines": [],
+    "noEngineReferences": false
 }
