--- a/XRTK.Anchors.ASA/Packages/manifest.json
+++ b/XRTK.Anchors.ASA/Packages/manifest.json
@@ -9,6 +9,7 @@
     }
   ],
   "dependencies": {
+    "com.xrtk.anchors": "file:../../XRTK.Anchors/XRTK.Anchors/Packages/com.xrtk.anchors",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ide.rider": "2.0.7",
