--- a/XRTK.Anchors.ASA/Packages/com.xrtk.anchors.asa/package.json
+++ b/XRTK.Anchors.ASA/Packages/com.xrtk.anchors.asa/package.json
@@ -10,8 +10,8 @@
     "mixed",
     "reality"
   ],
-  "version": "0.2.0",
-  "unity": "2019.4",
+  "version": "0.3.0",
+  "unity": "2020.3",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -19,7 +19,8 @@
   },
   "author": "XRTK Team (https://github.com/XRTK)",
   "dependencies": {
-    "com.xrtk.core": "0.2.16"
+    "com.xrtk.core": "0.3.0-preview.7",
+    "com.xrtk.anchors": "0.3.0"
   },
   "profiles": [
     {
