--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "XRTK.Anchors"]
-	path = XRTK.Anchors
-	url = https://github.com/XRTK/Anchors.git
+[submodule "XRTK.SpatialPersistence"]
+	path = XRTK.SpatialPersistence
+	url = https://github.com/XRTK/SpatialPersistence.git
