--- a/XRTK.SpatialPersistence.ASA/Packages/com.xrtk.spatial-persistence.asa/Editor/XRTK.SpatialPersistence.ASA.Editor.asmdef
+++ b/XRTK.SpatialPersistence.ASA/Packages/com.xrtk.spatial-persistence.asa/Editor/XRTK.SpatialPersistence.ASA.Editor.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "XRTK.Anchors.ASA.Editor",
-    "rootNamespace": "XRTK.Anchors.ASA.Editor",
+    "name": "XRTK.SpatialPersistence.ASA.Editor",
+    "rootNamespace": "XRTK.SpatialPersistence.ASA.Editor",
     "references": [
         "GUID:f3241d040533491e8a1e2714b27c3111",
         "GUID:e67d30660ec243e4836aac191d3f36fb",
