Initial check-in for ASA implementation

--- a/XRTK.SpatialPersistence.ASA/Packages/manifest.json
+++ b/XRTK.SpatialPersistence.ASA/Packages/manifest.json
@@ -9,13 +9,21 @@
     }
   ],
   "dependencies": {
-    "com.xrtk.spatial-persistence": "file:../../XRTK.SpatialPersistence/XRTK.SpatialPersistence/Packages/com.xrtk.spatial-persistence",
+    "com.microsoft.azure.spatial-anchors-sdk.android": "file:MixedReality/com.microsoft.azure.spatial-anchors-sdk.android-2.10.1.tgz",
+    "com.microsoft.azure.spatial-anchors-sdk.core": "file:MixedReality/com.microsoft.azure.spatial-anchors-sdk.core-2.10.1.tgz",
+    "com.microsoft.azure.spatial-anchors-sdk.ios": "file:MixedReality/com.microsoft.azure.spatial-anchors-sdk.ios-2.10.1.tgz",
+    "com.microsoft.azure.spatial-anchors-sdk.windows": "file:MixedReality/com.microsoft.azure.spatial-anchors-sdk.windows-2.10.1.tgz",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.11",
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.test-framework": "1.1.27",
+    "com.unity.xr.arcore": "4.1.7",
+    "com.unity.xr.arfoundation": "4.1.7",
+    "com.unity.xr.arkit": "4.1.7",
+    "com.xrtk.sdk": "0.2.7",
+    "com.xrtk.spatial-persistence": "file:../../XRTK.SpatialPersistence/XRTK.SpatialPersistence/Packages/com.xrtk.spatial-persistence",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
