--- a/.gitignore
+++ b/.gitignore
@@ -77,5 +77,7 @@ ThirdParty.meta
 --Version/
 
 # ====================== #
-# Project Symbolic Links #
+# Project Assets         #
 # ====================== #
+[Aa]zureSpatialAnchors.SDK/
+[Ss]patialAnchorConfig.asset
