--- a/XRTK.SpatialPersistence.ASA/Packages/com.xrtk.spatial-persistence.asa/package.json
+++ b/XRTK.SpatialPersistence.ASA/Packages/com.xrtk.spatial-persistence.asa/package.json
@@ -19,9 +19,9 @@
   },
   "author": "XRTK Team (https://github.com/XRTK)",
   "dependencies": {
-    "com.xrtk.core": "0.3.0-preview.7",
-    "com.xrtk.spatial-persistence": "0.3.0",
-	"com.unity.xr.arfoundation": "4.1.7"
+    "com.xrtk.core": "0.3.0-preview.15",
+    "com.xrtk.spatial-persistence": "0.3.0-preview.6",
+    "com.unity.xr.arfoundation": "4.1.7"
   },
   "profiles": [
     {
