--- a/XRTK.SpatialPersistence.ASA/Packages/com.xrtk.spatial-persistence.asa/Runtime/XRTK.SpatialPersistence.ASA.asmdef
+++ b/XRTK.SpatialPersistence.ASA/Packages/com.xrtk.spatial-persistence.asa/Runtime/XRTK.SpatialPersistence.ASA.asmdef
@@ -9,7 +9,12 @@
         "GUID:cea456fb85d819645899d08b84466140",
         "GUID:d4aaefa3e06ea4bad82d59bf7ee4969f"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Android",
+        "Editor",
+        "iOS",
+        "WSA"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
