--- a/XRTK.SpatialPersistence.ASA/Assets/Plugins/Android/AndroidManifest.xml
+++ b/XRTK.SpatialPersistence.ASA/Assets/Plugins/Android/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.microsoft.azure.spatialanchors.examples.unity.helloar"
+    package="com.xrtk.spatialpersistence.asa"
     xmlns:tools="http://schemas.android.com/tools"
     android:installLocation="preferExternal">
   <supports-screens
