--- a/XRTK.SpatialPersistence.ASA/Packages/com.xrtk.spatial-persistence.asa/package.json
+++ b/XRTK.SpatialPersistence.ASA/Packages/com.xrtk.spatial-persistence.asa/package.json
@@ -8,7 +8,10 @@
     "ar",
     "xr",
     "mixed",
-    "reality"
+    "reality",
+    "azure",
+    "spatial",
+    "anchors"
   ],
   "version": "0.3.0",
   "unity": "2020.3",
@@ -19,8 +22,7 @@
   },
   "author": "XRTK Team (https://github.com/XRTK)",
   "dependencies": {
-    "com.xrtk.core": "0.3.0-preview.15",
-    "com.xrtk.spatial-persistence": "0.3.0-preview.8",
+    "com.xrtk.spatial-persistence": "0.3.0-preview.9",
     "com.unity.xr.arfoundation": "4.1.7"
   },
   "profiles": [
